# preprocessing-pgp

./: .gitignore  .travis.yml  LICENSE  LICENSE.txt  MANIFEST.in  README.md  pyproject.toml  pytest.ini  requirements.txt  setup.py
nlp_preprocessing_qvm9/: __main__.py  const.py  extract_human.py  preprocess.py  unicode_converter.py
nlp_preprocessing_qvm9/data/head_code/: mobi_head_code.parquet
nlp_preprocessing_qvm9/phone/: const.py  converter.py  extractor.py  phone_extraction.py  utils.py  valid_email_phone.py
preprocessing_pgp/: __init__.py  __main__.py  accent_typing_formatter.py  const.py  extract_human.py  preprocess.py  utils.py
preprocessing_pgp/address/: const.py  extractor.py  import_libs.py  level_extractor.py  loc_process.py  preprocess.py  utils.py
preprocessing_pgp/address/scripts/: address_parsing_auto.py  address_parsing_auto_v2.py  const.py  extract_address_component.py  extractor.py  level_extractor.py  preprocess.py  utils.py
preprocessing_pgp/card/: const.py  preprocess.py  utils.py  validation.py
preprocessing_pgp/data/: card_id.ipynb  new_codes.parquet  old_codes.parquet
preprocessing_pgp/data/head_code/: tele_head_code.parquet
preprocessing_pgp/data/name_split/: ext_data.parquet  ext_data_uit.parquet
preprocessing_pgp/email/: const.py  info_extractor.py  preprocess.py  utils.py  validator.py
preprocessing_pgp/email/extractors/: const.py  email_address_extractor.py  email_name_extractor.py  email_phone_extractor.py  email_yob_extractor.py
preprocessing_pgp/name/: accent_typing_formatter.py  const.py  enrich_name.py  extract_human.py  name_processing.py  preprocess.py  rulebase_name.py  split_name.py  unicode_converter.py  utils.py  vector_creation.py
preprocessing_pgp/name/gender/: predict_gender.py
preprocessing_pgp/name/model/: lstm.py  nbsvm.py  transformers.py
preprocessing_pgp/name/type/: const.py  extractor.py
preprocessing_pgp/phone/: const.py  converter.py  detector.py  extractor.py  utils.py  validator.py
preprocessing_pgp/pre/: .get_new_user.py.swp  get_new_user.py
preprocessing_pgp/pre/append/: unify_credit.py  unify_credit_new.py  unify_fo.py  unify_fo_new.py  unify_fplay.py  unify_fplay_new.py  unify_fshop.py  unify_fshop_new.py  unify_fsoft.py  unify_fsoft_new.py  unify_ftel.py  unify_ftel_new.py  unify_longchau.py  unify_longchau_new.py  unify_sendo.py  unify_sendo_new.py
preprocessing_pgp/pre/backup/: get_new_user.py  unify_fo.py  unify_fplay.py  unify_fshop.py  unify_ftel.py  (+2 more)
tests/address/: test_advance_cases.py  test_basic_cases.py
tests/card_id/: test_validation.py
tests/email/: test_email_info_extractor.py
tests/name/: test_name_function.py  test_preprocess_name.py
tests/phone/: test_valid_phone.py
text/: __init__.py  accent_typing_formatter.py  config.txt  extract_human.py  preprocess.py  utils.py
(+160 files in other folders)
