[build-system]
requires      = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "preprocessing-pgp"
version = "0.1.2"
description = "Fix phone converter mechanism and add new indicator columns"
readme = "README.md"
authors = [{ name = "quangvm9", email = "quangvm9@fpt.com.vn" }]
license = { file = "LICENSE.txt" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["nlp", "text", "preprocessing"]
dependencies = [
    "Unidecode",
    "tqdm",
    "pandas",
    "numpy",
    "regex",
    "pyarrow"
]
requires-python = ">=3.6"

[project.optional-dependencies]
dev = ["black", "bumpver", "isort", "pip-tools", "pytest", "build", "twine", "autopep8"]

[project.scripts]
realpython = "preprocessing_pgp.__main__:main"