[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "preprocessing-pgp"
version = "0.1.9"
description = "Preprocessing required data for customer service purpose"
readme = "README.md"
authors = [{ name = "quangvm9", email = "quangvm9@fpt.com.vn" }]
license = { text = "MIT License" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]
keywords = ["nlp", "text", "preprocessing"]
dependencies = [
    "Unidecode",
    "tqdm",
    "pandas",
    "numpy",
    "regex",
    "pyarrow",
    "tensorflow>=2.8",
]
requires-python = ">=3.6"

[project.optional-dependencies]
dev = [
    "black",
    "bumpver",
    "isort",
    "pip-tools",
    "pytest",
    "build",
    "twine",
    "autopep8",
]

[project.urls]
homepage = "https://github.com/quangvuminh2000/preprocessing-pgp"

[project.scripts]
realpython = "preprocessing_pgp.__main__:main"
